# viflashdrv

./: CMakeLists.txt  CMakePresets.json  README.md  codecoverage.sh
core/: CMakeLists.txt
core/src/: viflashdrv.c
core/src/inc/: viflashdrv.h  viflashdrv_private.h
doc/: Doxyfile
tests/: tst_viflashdrv.c
tests/main/: main.c
